--- a/company/about.html
+++ b/company/about.html
@@ -7,19 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="company/about.html"</a><img src="images/kris.jpg" alt=""></a>
-
-
-
-
-
-
-
-
-
-
-    <h2>Hyperlinks
-    </h2>
-
+    <a href="company/about.html">About Me</a>
+    <a href="/company/images/kz.jpeg" download="">My Photo</a>
 </body>
 </html>
