--- a/company/about.html
+++ b/company/about.html
@@ -9,5 +9,19 @@
 <body>
     <a href="company/about.html">About Me</a>
     <a href="/company/images/kz.jpeg" download="">My Photo</a>
-</body>
+    <a href="#section-css">CSS</a>
+    <a href="https://google.com">Google</a>
+    <h2>HTML</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Obcaecati blanditiis nihil, veniam ut iure rem dignissimos 
+        repellendus amet est dolorem voluptate quasi! 
+        Architecto eaque vitae eum id tempore, provident 
+        cumque laborum accusamus quis quibusdam nostrum atque odio qui
+         eos sint! Fugit, ipsam quis. Quos ullam maiores necessitatibus 
+         explicabo minus ratione voluptatem quia id dolor et enim blanditiis 
+         commodi provident aliquid aut quam repudiandae facilis ea a qui, 
+         quisquam placeat corporis perspiciatis. Asperiores odio molestias quo quos ipsam perspiciatis recusandae dolorum distinctio excepturi, voluptatem sunt eligendi dolorem esse, dignissimos quibusdam enim nemo velit. Dolore doloribus excepturi voluptas cum ut vitae at iure vel harum adipisci eligendi deleniti debitis, neque rem quibusdam minima fuga fugiat accusamus beatae ullam vero dolorum. Deleniti illo laudantium cum itaque quas.
+
+    </p>
+    <h2 id="</body>
 </html>
