--- a/company/about.html
+++ b/company/about.html
@@ -10,7 +10,8 @@
     <a href="company/about.html">About Me</a>
     <a href="/company/images/kz.jpeg" download="">My Photo</a>
     <a href="#section-css">CSS</a>
-    <a href="https://google.com">Google</a>
+    <a href="https://google.com" target="_blank">Google</a>
+    <a href="mailto:kris@synergicrecords.com">Email Me</a>
     <h2>HTML</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
         Obcaecati blanditiis nihil, veniam ut iure rem dignissimos 
@@ -23,5 +24,5 @@
          quisquam placeat corporis perspiciatis. Asperiores odio molestias quo quos ipsam perspiciatis recusandae dolorum distinctio excepturi, voluptatem sunt eligendi dolorem esse, dignissimos quibusdam enim nemo velit. Dolore doloribus excepturi voluptas cum ut vitae at iure vel harum adipisci eligendi deleniti debitis, neque rem quibusdam minima fuga fugiat accusamus beatae ullam vero dolorum. Deleniti illo laudantium cum itaque quas.
 
     </p>
-    <h2 id="</body>
+    </body>
 </html>
