--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New HTML5 Elements -Semantics</title>
 </head>
 <body>
-    <a href="company/about.html"</a><img src="images/kris.jpg" alt=""></a>
+    
+<article class="article">
+<h1>Heading</h1>
+<p>
+    <mark>Lorem</mark> ipsum dolor sit, amet consectetur adipisicing elit. Vero
+    voluptatum sint omnis id illo! Accusantium,
+     sapiente assumenda.</p>
+<figure><img src="http://placehold.it/""></figure>
+<figcaption>MY image here with caption</figcaption>
 
-
-
-
-
-
-
-
-
-
-    <h2>Hyperlinks
-    </h2>
-
+</article>
 </body>
 </html>
