--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    
+    <ahref="https://google.com" target="_blank">Google</ahref>
+    <section id="products">
+    <article class="product"></article>
+    <article class="product"></article>
+    <article class="product"></article>
+</section>
 </body>
 </html>
