--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.css"> 
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    <ahref="https://google.com" target="_blank">Google</ahref>
+    <heading><h2>Heading</h2></heading>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul>
     <section id="products">
-    <article class="product"></article>
-    <article class="product"></article>
-    <article class="product"></article>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <article> 
+        <p>Lorem ipsum dolor sit amet.</p>
+    </article>
+    </section>
 </section>
 </body>
 </html>
