--- a/index.html
+++ b/index.html
@@ -8,20 +8,13 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    <heading><h2>Heading</h2></heading>
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
-    </ul>
-    <section id="products">
-        <p>Lorem ipsum dolor sit amet.</p>
-        <article> 
-        <p>Lorem ipsum dolor sit amet.</p>
-    </article>
-    </section>
-</section>
+<p>
+    <span class="first-letter">L</span>orem ipsum dolor, sit amet consectetur adipisicing elit. 
+    Deleniti minus, tempore odit expedita illo ratione doloribus 
+    dolor quo inventore accusantium unde perferendis fuga 
+    exercitationem, esse laborum nam molestias dolore culpa 
+    harum. Voluptas eaque nostrum facere atque libero explicabo, 
+    am repudiandae a, doloribus enim, 
+    quae modi necessitatibus vero quod ipsam deleniti.</p>
 </body>
 </html>
