--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css"
 </head>
+<h1>Heading</h1>
 <body>
 <p>
-    <span class="first-letter">L</span>orem ipsum dolor, sit amet consectetur adipisicing elit. 
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
     Deleniti minus, tempore odit expedita illo ratione doloribus 
     dolor quo inventore accusantium unde perferendis fuga 
     exercitationem, esse laborum nam molestias dolore culpa 
